# Market-pattern-matcher

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.back  Dockerfile.ui  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-backend.txt  requirements-ui.txt
.devcontainer/: devcontainer.json
scripts/: download_data.py  normalize.py  preprocess.py  sync_db.py
scripts/db/: __init__.py  db.py  init_db.py  sync_db.py
src/api/: app.py  catalog.py  crud.py  schemas.py
src/api/routers/: list.py  search.py  ticker.py
src/core/: dataset.py  index.py  model.py  search.py  train.py
src/ui/: db.py  streamlit.py
ui/: streamlit.py
