[project]
name = "market-patter-match"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
    "yfinance>=1.1.0",
    "faiss-cpu>=1.11.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "I", "B", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
